force-app/main/default/objects/qb_Invoice__c/qb_Invoice__c.object-meta.xml
<CustomObject>
    <label>Quickbooks Invoice</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Invoice #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quickbooks Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>