force-app/main/default/objects/qb_Invoice__c/fields/ApplyTaxAfterDiscount__c.field-meta.xml
<CustomField>
    <fullName>ApplyTaxAfterDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ApplyTaxAfterDiscount</label>
    <type>Checkbox</type>
</CustomField>