force-app/main/default/objects/qb_Invoice__c/fields/BillAddr__c.field-meta.xml
<CustomField>
    <fullName>BillAddr__c</fullName>
    <label>Billing Location</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>