force-app/main/default/objects/qb_Invoice__c/fields/BillEmail__c.field-meta.xml
<CustomField>
    <fullName>BillEmail__c</fullName>
    <label>Billing Email</label>
    <type>Email</type>
</CustomField>