force-app/main/default/objects/qb_Invoice__c/fields/CustomerMemo__c.field-meta.xml
<CustomField>
    <fullName>CustomerMemo__c</fullName>
    <label>CustomerMemo</label>
    <type>TextArea</type>
</CustomField>