force-app/main/default/objects/qb_Invoice__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <label>Deposit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>