force-app/main/default/objects/qb_Invoice__c/fields/DocNumber__c.field-meta.xml
<CustomField>
    <fullName>DocNumber__c</fullName>
    <label>DocNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>