force-app/main/default/objects/qb_Invoice__c/fields/EmailStatus__c.field-meta.xml
<CustomField>
    <fullName>EmailStatus__c</fullName>
    <label>Email Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>