force-app/main/default/objects/qb_Invoice__c/fields/InvoiceId__c.field-meta.xml
<CustomField>
    <fullName>InvoiceId__c</fullName>
    <externalId>true</externalId>
    <label>Invoice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>