force-app/main/default/objects/qb_Invoice__c/fields/PrintStatus__c.field-meta.xml
<CustomField>
    <fullName>PrintStatus__c</fullName>
    <label>PrintStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>