force-app/main/default/objects/qb_Invoice__c/fields/QuickBooks_Customer__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Customer__c</fullName>
    <label>QuickBooks Customer</label>
    <referenceTo>qb_Customer__c</referenceTo>
    <relationshipLabel>Quickbooks Invoices</relationshipLabel>
    <relationshipName>Quickbooks_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>