force-app/main/default/objects/qb_Invoice__c/fields/SalesTermRef__c.field-meta.xml
<CustomField>
    <fullName>SalesTermRef__c</fullName>
    <label>SalesTermRef</label>
    <length>10</length>
    <type>Text</type>
</CustomField>