force-app/main/default/objects/qb_Invoice__c/fields/Send_To_QuickBooks__c.field-meta.xml
<CustomField>
    <fullName>Send_To_QuickBooks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To QuickBooks</label>
    <type>Checkbox</type>
</CustomField>