force-app/main/default/objects/qb_Invoice__c/fields/ShipCity__c.field-meta.xml
<CustomField>
    <fullName>ShipCity__c</fullName>
    <label>Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>