force-app/main/default/objects/qb_Invoice__c/fields/ShipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShipPostalCode__c</fullName>
    <label>Shipping PostalCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>