force-app/main/default/objects/qb_Invoice__c/fields/ShipState__c.field-meta.xml
<CustomField>
    <fullName>ShipState__c</fullName>
    <label>Shipping State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>