force-app/main/default/objects/qb_Invoice__c/fields/ShipStreet__c.field-meta.xml
<CustomField>
    <fullName>ShipStreet__c</fullName>
    <label>Shipping Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>