force-app/main/default/objects/qb_Invoice__c/fields/TxnDate__c.field-meta.xml
<CustomField>
    <fullName>TxnDate__c</fullName>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>